--- a/cartridges/app_drschar_storefront/cartridge/client/default/scss/experience/components/drschar_components/instagramFeed.scss
+++ b/cartridges/app_drschar_storefront/cartridge/client/default/scss/experience/components/drschar_components/instagramFeed.scss
@@ -3,6 +3,10 @@
     padding-right: 0px;
     padding-left: 0px;
 }
+.experience-component.experience-drschar_components-instagramFeed .container{
+  padding-right: 0px;
+  padding-left: 0px;
+}
 
 .product-tile .image-container {
     position: relative;
